--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -412,8 +412,7 @@
       "source": [
         "def custom_standardization(input_data):\n",
         "    return tf.strings.regex_replace(\n",
-        "        tf.strings.lower(input_data), \"[%s]\" % re.escape(\n",
-        "            string.punctuation), \"\"\n",
+        "        tf.strings.lower(input_data), \"[%s]\" % re.escape(string.punctuation), \"\"\n",
         "    )"
       ]
     },
@@ -631,7 +630,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 128,
       "metadata": {
         "id": "dkQP6in8yUBR"
       },
@@ -642,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 129,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -655,20 +654,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_2\"\n",
+            "Model: \"sequential_8\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " embedding_2 (Embedding)     (None, None, 16)          160016    \n",
+            " embedding_8 (Embedding)     (None, None, 16)          160016    \n",
             "                                                                 \n",
-            " dropout_4 (Dropout)         (None, None, 16)          0         \n",
+            " dropout_16 (Dropout)        (None, None, 16)          0         \n",
             "                                                                 \n",
-            " global_average_pooling1d_2   (None, 16)               0         \n",
+            " global_average_pooling1d_8   (None, 16)               0         \n",
             " (GlobalAveragePooling1D)                                        \n",
             "                                                                 \n",
-            " dropout_5 (Dropout)         (None, 16)                0         \n",
+            " dropout_17 (Dropout)        (None, 16)                0         \n",
             "                                                                 \n",
-            " dense_2 (Dense)             (None, 4)                 68        \n",
+            " dense_8 (Dense)             (None, 4)                 68        \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 160,084\n",
@@ -707,7 +706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 130,
       "metadata": {
         "id": "Mr0GP-cQ-llN"
       },
@@ -733,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 131,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -741,7 +740,34 @@
         "id": "tXSGrjWZ-llW",
         "outputId": "e70fd88f-fb2a-4fec-9d51-ed7800701c7a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "200/200 [==============================] - 2s 9ms/step - loss: 1.3774 - accuracy: 0.3431 - val_loss: 1.3644 - val_accuracy: 0.4850\n",
+            "Epoch 2/10\n",
+            "200/200 [==============================] - 1s 7ms/step - loss: 1.3467 - accuracy: 0.4820 - val_loss: 1.3249 - val_accuracy: 0.5294\n",
+            "Epoch 3/10\n",
+            "200/200 [==============================] - 1s 7ms/step - loss: 1.2965 - accuracy: 0.5430 - val_loss: 1.2670 - val_accuracy: 0.5788\n",
+            "Epoch 4/10\n",
+            "200/200 [==============================] - 1s 7ms/step - loss: 1.2301 - accuracy: 0.5798 - val_loss: 1.1974 - val_accuracy: 0.6194\n",
+            "Epoch 5/10\n",
+            "200/200 [==============================] - 1s 7ms/step - loss: 1.1565 - accuracy: 0.6248 - val_loss: 1.1256 - val_accuracy: 0.6700\n",
+            "Epoch 6/10\n",
+            "200/200 [==============================] - 1s 7ms/step - loss: 1.0806 - accuracy: 0.6639 - val_loss: 1.0563 - val_accuracy: 0.6931\n",
+            "Epoch 7/10\n",
+            "200/200 [==============================] - 1s 7ms/step - loss: 1.0112 - accuracy: 0.6969 - val_loss: 0.9932 - val_accuracy: 0.7188\n",
+            "Epoch 8/10\n",
+            "200/200 [==============================] - 2s 8ms/step - loss: 0.9488 - accuracy: 0.7262 - val_loss: 0.9361 - val_accuracy: 0.7381\n",
+            "Epoch 9/10\n",
+            "200/200 [==============================] - 2s 8ms/step - loss: 0.8905 - accuracy: 0.7477 - val_loss: 0.8858 - val_accuracy: 0.7456\n",
+            "Epoch 10/10\n",
+            "200/200 [==============================] - 2s 8ms/step - loss: 0.8387 - accuracy: 0.7592 - val_loss: 0.8420 - val_accuracy: 0.7638\n"
+          ]
+        }
+      ],
       "source": [
         "epochs = 10\n",
         "history = model.fit(train_ds, validation_data=val_ds, epochs=epochs)"
@@ -952,8 +978,7 @@
       },
       "outputs": [],
       "source": [
-        "examples = [\"The movie was great!\",\n",
-        "            \"The movie was okay.\", \"The movie was terrible...\"]\n",
+        "examples = [\"The movie was great!\", \"The movie was okay.\", \"The movie was terrible...\"]\n",
         "\n",
         "export_model.predict(examples)"
       ]
