--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -937,14 +937,12 @@
         "id": "-to23J3Vy5d3"
       },
       "source": [
-        "## Экспортируйте модель с дополнительным слоем подготовки данных\n",
-        "\n",
-        "In the code above, you applied the `TextVectorization` layer to the dataset before feeding text to the model. If you want to make your model capable of processing raw strings (for example, to simplify deploying it), you can include the `TextVectorization` layer inside your model. To do so, you can create a new model using the weights you just trained.\n"
+        "## Экспортируйте модель с дополнительным слоем подготовки данных\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 137,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -952,19 +950,27 @@
         "id": "FWXsMvryuZuq",
         "outputId": "1421411d-0155-4f00-d13d-64fc02733218"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "250/250 [==============================] - 4s 13ms/step - loss: 0.8716 - accuracy: 0.7400\n",
+            "0.7400000095367432\n"
+          ]
+        }
+      ],
       "source": [
         "export_model = tf.keras.Sequential(\n",
         "    [vectorize_layer, model, layers.Activation(\"sigmoid\")]\n",
         ")\n",
         "\n",
         "export_model.compile(\n",
-        "    loss=losses.BinaryCrossentropy(from_logits=False),\n",
+        "    loss=losses.SparseCategoricalCrossentropy(from_logits=False),\n",
         "    optimizer=\"adam\",\n",
         "    metrics=[\"accuracy\"],\n",
         ")\n",
         "\n",
-        "# Test it with `raw_test_ds`, which yields raw strings\n",
         "loss, accuracy = export_model.evaluate(raw_test_ds)\n",
         "print(accuracy)"
       ]
