--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -988,7 +988,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 140,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -996,42 +996,36 @@
         "id": "QW355HH5L49K",
         "outputId": "2626f94e-df2a-47e6-c732-43dce12ea11a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 57ms/step\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "array([[0.5100445 , 0.48924989, 0.53023624, 0.47173792],\n",
+              "       [0.5181926 , 0.49799618, 0.5362496 , 0.45096424],\n",
+              "       [0.5210514 , 0.5003176 , 0.52838135, 0.45206916],\n",
+              "       [0.51911294, 0.48972076, 0.54400176, 0.45329645]], dtype=float32)"
+            ]
+          },
+          "execution_count": 140,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "examples = [\"The movie was great!\",\n",
-        "            \"The movie was okay.\", \"The movie was terrible...\"]\n",
+        "examples = [\"Can someone help me with C# EntityFramework?\",\n",
+        "            \"Is there some cheatsheet about dunder methods?\",\n",
+        "            \"I have problem with maven\",\n",
+        "            \"How to update DOM?\"\n",
+        "            ]\n",
         "\n",
         "export_model.predict(examples)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MaxlpFWpzR6c"
-      },
-      "source": [
-        "Including the text preprocessing logic inside your model enables you to export a model for production that simplifies deployment, and reduces the potential for [train/test skew](https://developers.google.com/machine-learning/guides/rules-of-ml#training-serving_skew).\n",
-        "\n",
-        "There is a performance difference to keep in mind when choosing where to apply your TextVectorization layer. Using it outside of your model enables you to do asynchronous CPU processing and buffering of your data when training on GPU. So, if you're training your model on the GPU, you probably want to go with this option to get the best performance while developing your model, then switch to including the TextVectorization layer inside your model when you're ready to prepare for deployment.\n",
-        "\n",
-        "Visit this [tutorial](https://www.tensorflow.org/tutorials/keras/save_and_load) to learn more about saving models.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "F0T5SIwSm7uc"
-      },
-      "source": [
-        "## Больше о классификации текстов ...\n",
-        "\n",
-        "...можно узнать тут: [Text classification guide](https://developers.google.com/machine-learning/guides/text-classification/).\n",
-        "Подходы с использованием ИНС (искуственных нейронных сетей): https://lena-voita.github.io/nlp_course/text_classification.html#neural_approaches\n"
       ]
     },
     {
